drkns 04.08.2017 20:07:24 +0000 - build 4999

1. С форума: "Падение при выходе “наверх” из панели результатов RESearch"

drkns 04.08.2017 00:27:23 +0000 - build 4998

1. Уточнение 4997 - погнулась замена.

2. Там же - криво работала замена, содержащая "\r", и уже давно.

drkns 01.08.2017 20:39:18 +0000 - build 4997

1. Продолжение #3462 - не меняем позицию курсора без необходимости.

drkns 31.07.2017 20:01:11 +0000 - build 4996

1. Уточнение 4995.1.

2. 0003462: Поиск всех вхождений теряет вхождение в первой строке

3. Там же - не снимаем выделение раньше времени, а также если ничего не нашли.

drkns 30.07.2017 01:45:36 +0000 - build 4995

1. Рефакторинг.

drkns 23.07.2017 22:34:57 +0000 - build 4994

1. 0003457: Мышь работает в FAR даже при отключённом параметре "Настройки интерфейса - Мышь"

2. Рефакторинг.

drkns 23.07.2017 10:31:34 +0000 - build 4993

1. Не работал поиск в справке.

2. В некоторых случаях не работало автодополнение.

drkns 22.07.2017 13:25:18 +0000 - build 4992

1. С форума: Ошибочная индикация позиции ошибки в регэкспе

drkns 21.07.2017 19:29:12 +0000 - build 4991

1. Уточнение 4989.

drkns 20.07.2017 23:10:16 +0000 - build 4990

1. Вернём защиту от нехваток памяти, добавленную в 1741 и потерянную в 3791.

drkns 20.07.2017 01:09:52 +0000 - build 4989

1. Рефакторинг. Остановим расползание PANEL_STOP по коду.

drkns 18.07.2017 20:34:50 +0000 - build 4988

1. Рефакторинг.

2. Coverity warnings.

shmuel 18.07.2017 13:36:33 +0200 - build 4987

1. M#3428: добавить GUID-ы для диалогов редактирования/вставки пунктов меню пользователя.

drkns 17.07.2017 21:53:50 +0000 - build 4986

1. 0003454: Completion путей перестал распознавать / в качестве разделителя.

shmuel 12.07.2017 23:53:19 +0200 - build 4985

1. Глючил DM_SETTEXT для DI_LISTBOX (начиная от билда 4248).

drkns 04.07.2017 23:44:29 +0000 - build 4984

1. Автообновление панелей не работало в каталогах с нетрадиционными именами.
