@@ -1,3 +1,7 @@
+drkns 06.08.2017 11:07:04 +0000 - build 5000
+
+1. Ещё одно уточнение 4996.
+
 drkns 04.08.2017 20:07:24 +0000 - build 4999
 
 1. С форума: "Падение при выходе “наверх” из панели результатов RESearch"
